fixing centering on iPhone

--- a/wp-content/themes/scott-freeman-author/style.css
+++ b/wp-content/themes/scott-freeman-author/style.css
@@ -1538,7 +1538,7 @@ object {
     }
     #primary-menu {
     margin-top: 30px;
-            right: inherit;
+    
     }
     .site-branding {
     float: none;;
